# LeetCodePractice

./: .gitmodules
0. Template/: main.cpp  scratchpad.txt
1046. Last Stone Weight/: main.cpp  scratchpad.txt
121. Best Time to Buy and Sell Stock/: main.cpp  scratchpad.txt
130. Surrounded Regions/: main.cpp  scratchpad.txt
133. Clone Graph/: main.cpp
167. Two Sum II - Input Array Is Sorted/: main  main.cpp  scratchpad.txt
198. House Robber/: main.cpp  scratchpad.txt
2. Add Two Numbers/: main.cpp
200. Number of Islands/: main.cpp
208. Implement Trie (Prefix Tree)/: main.cpp
209. Minimum Size Subarray Sum/: main.cpp  scratchpad.txt
215. Kth Largest Element in an Array/: main.cpp  scratchpad.txt
224. Basic Calculator/: main.cpp
2325. Decode the Message/: main.cpp  scratchpad.txt
24. Swap Nodes in Pairs/: main  main.cpp
3. Longest Substring Without Repeating Characters/: main.cpp
32. Longest Valid Parentheses/: main.cpp
347. Top K Frequent Elements/: main.cpp  scratchpad.txt
35. Search Insert Position/: main.cpp
36. Valid Sudoku/: main.cpp  scratchpad.txt
39. Combination Sum/: main.cpp
520. Detect Capital/: main.cpp
695. Max Area of Island/: main.cpp
703. Kth Largest Element in a Stream/: main.cpp
735. Asteroid Collision/: main.cpp
74. Search a 2D Matrix/: main.cpp
746. Min Cost Climbing Stairs/: scratchpad.txt
83. Remove Duplicates from Sorted List/: main.cpp
86. Partition List/: main.cpp
973. K Closest Points to Origin/: main  (+2 more)
CPPLeetCodeTemplate/: CMakeLists.txt  README.md
CPPLeetCodeTemplate/src/: main  main.cpp
(+6 files in other folders)
